fixing the correct flag for java 17